[package]
name = "typed-concourse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror  = "1.0.40"
names      = "0.14.0"
git-url-parse = "0.4.4"

[build-dependencies]
